--- a/src/main/webapp/script/index.xhtml
+++ b/src/main/webapp/script/index.xhtml
@@ -44,7 +44,7 @@
                         <p:dataList paginator="true" paginatorAlwaysVisible="false" type="ordered" rows="10" style="width: 100%;border: 0px;"
                                     value="#{vistaController.allVistasItems}" var="vista1" >
                             <p:column>
-                                <p:commandLink id="link1" ajax="true" update=":mainform:messages :formfilter:panelFilter0:panelFilter :form0:panelG1" 
+                                <p:commandLink id="link1" ajax="true" update=":accionesaccordion1:vistasForm :mainform:messages :formfilter:panelFilter0:panelFilter :form0:panelG1" 
                                                action="#{casoController.applyViewFilter(vista1)}" 
                                                value="#{vista1.nombre}" style="font-weight: bold" styleClass="ui-state-default" />
                                 <p:tooltip for="link1" value="#{vista1.descripcion}" showEffect="fade" hideEffect="fade" />  
@@ -285,6 +285,7 @@
                     <p:messages/>
                     <h:outputLabel value="Esta accion se ejecutara solo en #{casoController.selectedItems.size()} casos seleccionados." rendered="#{not empty casoController.selectedItems}"/>
                     <h:outputLabel value="Esta accion se ejecutara en todos los casos de la vista (#{casoController.pagination.itemsCount} casos)." rendered="#{empty casoController.selectedItems and casoController.pagination.itemsCount gt 0}"/>
+                    <br/>
                     <h:panelGrid columns="2">
                         <h:outputLabel value="Acción:"/>
                         <p:selectOneMenu label="Seleccione una acción"
